syntax = "proto3";

// Public API for Hyades repository meta analysis.
package org.dependencytrack.repometaanalysis.v1;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "org.dependencytrack.proto.repometaanalysis.v1";

message AnalysisCommand {
  // The component that shall be analyzed.
  Component component = 1;
  FetchMeta fetch_meta = 2;
}

enum FetchMeta{
  FETCH_META_UNSPECIFIED = 0;
  FETCH_META_INTEGRITY_DATA = 1;
  FETCH_META_LATEST_VERSION = 2;
  FETCH_META_INTEGRITY_DATA_AND_LATEST_VERSION = 3;
}

message AnalysisResult {
  // The component this result is for.
  Component component = 1;

  // Identifier of the repository where the result was found.
  optional string repository = 2;

  // Latest version of the component.
  optional string latest_version = 3;

  // When the latest version was published.
  optional google.protobuf.Timestamp published = 4;

  // Integrity metadata of the component.
  optional IntegrityMeta integrity_meta = 5;
}

message Component {
  // Package URL of the component.
  string purl = 1;

  // Whether the component is internal to the organization.
  // Internal components will only be looked up in internal repositories.
  optional bool internal = 2;
  optional string uuid = 3;
}

message IntegrityMeta {
  optional string md5 = 1;
  optional string sha1 = 2;
  optional string sha256 = 3;
  optional string sha512 = 4;
  // When the component current version last modified.
  optional google.protobuf.Timestamp current_version_last_modified = 5;
  // Complete URL to fetch integrity metadata of the component.
  optional string meta_source_url = 6;
}
